# pnp-companion-2

./: .gitignore  Cargo.toml  README.md  build.rs  tm-companion.icns
.circleci/: config.yml
.github/: main.yml
.github/workflows/: main.yml
scripts/: build-tm-from-source.ps1  build-tm-from-source.sh  build-tm-local.ps1  build-tm-local.sh
src/: ai_handler.rs  file.rs  file_actions.rs  frontend_handler.rs  main.rs  response_handler.rs
