[package]
name = "pnp-companion"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "companion to plugandplayground for handling API communication"

[package.metadata.bundle]
name = "pnp-companion"
identifier = "pnp-companion"
icon = ["pnp.png", "pnp-companion.icns"]
version = "1.0.0"
resources = ["resources"]
category = "Developer Tool"
short_description = "An example application."
#deb_depends = ["libgl0-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_url_schemes = ["com.doe.exampleapplication"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
serde = {version = "1.0.152", features = ["derive"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = {version="0.4.0", features = ["cors"]}
reqwest = "0.11.14"
xml2json-rs = "1.0.1"
regex = "1.7.3"
base64 = "0.21.4"
[build-dependencies]
winres = "0.1"
cargo-bundle="0.6.0"
