[package]
name = "tm-companion"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "companion to tailrmade for handling API communication"

[package.metadata.bundle]
name = "tm-companion"
identifier = "tm-companion"
icon = ["tm.png", "tm-companion.icns"]
version = "1.0.0"
resources = ["resources"]
category = "Developer Tool"
short_description = "An example application."
#deb_depends = ["libgl0-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_url_schemes = ["com.doe.exampleapplication"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
serde = {version = "1.0.215", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = {version="0.6.2", features = ["cors"]}
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde_json = "1.0"
futures-util = "0.3"
mime_guess = "2.0"
xml2json-rs = "1.0.1"
regex = "1.11.1"
base64 = "0.22.1"
tray-icon = "0.19.2"
image = "0.25.5"
tao = "0.30.8"
dotenv = "0.15.0"
axum-server = "0.7.1"
webbrowser = "1.0"
[build-dependencies]
winres = "0.1"
cargo-bundle="0.6.1"
